# snak

./: .gitignore
ai/: Agent.py  evaluate.py  game.py  painter.py  plot_utils.py  ppo.py  pyproject.toml  snake.py  train.py  train_keras.py  train_pytorch.py  visualization.py
ai/generate_plots/: CriticADV.py  PN.py
ai/history/: act-weight_2024-11-19-19-42-54_267_53.2.pkl  act-weight_2024-11-19-19-42-55_268_55.2.pkl  act-weight_2024-11-19-19-42-56_270_61.2.pkl  act-weight_2024-11-19-19-42-58_275_63.2.pkl  act-weight_2024-11-19-19-43-00_279_71.2.pkl  act-weight_2024-11-19-19-43-20_322_73.2.pkl  act-weight_2024-11-19-19-44-38_492_79.2.pkl  act-weight_2024-11-19-19-46-05_681_94.0.pkl  act-weight_2024-11-19-19-52-18_267_27.2.pkl  act-weight_2024-11-19-19-52-19_268_35.2.pkl  act-weight_2024-11-19-19-52-19_269_37.2.pkl  act-weight_2024-11-19-19-52-21_273_55.2.pkl  act-weight_2024-11-19-19-52-32_296_73.2.pkl  act-weight_2024-11-19-19-52-36_305_77.2.pkl  act-weight_2024-11-19-19-52-42_317_79.2.pkl  act-weight_2024-11-19-19-53-11_379_83.2.pkl  act-weight_2024-11-19-19-54-54_600_85.2.pkl  act-weight_2024-11-19-20-04-27_267_29.2.pkl  act-weight_2024-11-19-20-04-28_269_41.2.pkl  act-weight_2024-11-19-20-04-30_274_57.5.pkl  act-weight_2024-11-19-20-04-33_281_73.2.pkl  act-weight_2024-11-19-20-05-02_343_79.2.pkl  act-weight_2024-11-19-20-05-24_389_83.2.pkl  act-weight_2024-11-19-20-06-38_547_87.2.pkl  act-weight_2024-11-19-20-48-13_267_51.2.pkl  act-weight_2024-11-19-20-48-16_274_53.2.pkl  act-weight_2024-11-19-20-48-16_275_61.2.pkl  act-weight_2024-11-19-20-48-30_305_67.2.pkl  (+44 more)
(+1 files in other folders)
