[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "keras>=3.6.0",
    "matplotlib>=3.9.2",
    "numpy>=2.0.2",
    "pydot>=3.0.2",
    "stubs>=1.0.0",
    "tensorflow>=2.18.0",
    "torchviz>=0.0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.7.3",
]
